Fix event page spacing Fix styling error where event details card went outside of div.

--- a/frontend/src/app/event/event-page/event-page.component.css
+++ b/frontend/src/app/event/event-page/event-page.component.css
@@ -48,11 +48,12 @@
 }
 
 .details-column {
-  position: fixed;
+  position: sticky;
   right: 24px;
   bottom: 24px;
   top: 170px;
   width: 548px;
+  height: 71vh;
 }
 
 @media only screen and (max-width: 1100px) {
